K1J-1461: Refactor